--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-<script src="../JAVASCRIPT/src.js" defer></script>
+<script src="src.js" defer></script>
 <style>
 body
 {
