--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@ textItem.addEventListener('click', e => {
     backgroundChange(divItem);
     textChange(textItem);
     ++i;
-
+    console.log(i);
 })
     </script>
 <style>
