--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
     var i = 0;
 const divItem = document.getElementById('object');
 const textItem = document.querySelector('#text');
-const textPseudo = window.getComputedStyle(textItem, '::before');
+const textPseudo = window.getComputedStyle('#text', '::before');
 
 function backgroundChange(div)
 {
