--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script>
+    <script defer>
     var i = 0;
 const divItem = document.getElementById('object');
 const textItem = document.getElementById('text');
