--- a/web/index.html
+++ b/web/index.html
@@ -3,35 +3,6 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-    <script defer>
-    var i = 0;
-const divItem = document.getElementById('object');
-const textItem = document.getElementById('text');
-const textPseudo = window.getComputedStyle(textItem, '::before');
-
-function backgroundChange(div)
-{
-    if(i%2 == 0)
-    return div.style.width='100%';
-    else
-    return div.style.width='0';
-}
-
-function textChange(text)
-{
-    if(i%2 == 0)
-    return text.style.setProperty('--width', '100%');
-    else
-    return text.style.setProperty('--width', '0');
-}
-
-textItem.addEventListener('click', e => {
-    backgroundChange(divItem);
-    textChange(textItem);
-    ++i;
-    console.log(i);
-})
-    </script>
 <style>
 body
 {
@@ -91,4 +62,34 @@ align-items: center;
 <div id="object"></div>
 
 </body>
+    <script>
+    var i = 0;
+const divItem = document.getElementById('object');
+const textItem = document.getElementById('text');
+const textPseudo = window.getComputedStyle(textItem, '::before');
+
+function backgroundChange(div)
+{
+    if(i%2 == 0)
+    return div.style.width='100%';
+    else
+    return div.style.width='0';
+}
+
+function textChange(text)
+{
+    if(i%2 == 0)
+    return text.style.setProperty('--width', '100%');
+    else
+    return text.style.setProperty('--width', '0');
+}
+
+textItem.addEventListener('click', e => {
+    backgroundChange(divItem);
+    textChange(textItem);
+    ++i;
+    console.log(i);
+})
+    </script>
+</html>
 
