--- a/web/index.html
+++ b/web/index.html
@@ -47,7 +47,7 @@ align-items: center;
     position: absolute;
     top: 0;
     left: 0;
-    width: var(--width);
+    width: var(--width, 0);
     height: 100%;
     color: white;
     -webkit-text-stroke: 1px white;
