--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@ align-items: center;
 </head>
 
 <body>
-<h1 data-text="aramon" id="text">aramon</h1>
+<h1 data-text="cuvier" id="text">cuvier</h1>
 <div id="object"></div>
 
 </body>
