--- a/web/index.html
+++ b/web/index.html
@@ -31,11 +31,11 @@ align-items: center;
     padding: 0;
     font-family: poppins;
     color: #964B00;
-    text-shadow: 6px 9px rgba(0, 0, 0, 0.2);
     font-size: 130px;
     text-transform: uppercase;
     -webkit-user-select: none;
     user-select: none;
+    animation: colorChange 1s, shadow 2s;
 }
 #text:hover
 {
@@ -54,6 +54,16 @@ align-items: center;
     overflow: hidden;
     transition: width 1s;
 }
+    @keyframes colorChange 
+    {
+        from {color: white;}
+        to {color: #964B00;}
+    }
+    @keyframes shadow 
+    {
+        from {text-shadow: 0 0 white;}
+        to {text-shadow: 6px 9px rgba(0, 0, 0, 0.2);}
+    }
 </style>
 </head>
 
