--- a/web/index.html
+++ b/web/index.html
@@ -30,12 +30,11 @@ align-items: center;
     margin: 0;
     padding: 0;
     font-family: poppins;
-    color: #964B00;
     font-size: 130px;
     text-transform: uppercase;
     -webkit-user-select: none;
     user-select: none;
-    animation: colorChange 1s, shadow 2s;
+    animation: colorChange 1s forwards, shadow 2s forwards;
 }
 #text:hover
 {
